--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,9 @@ plugins {
 
 version = project.mod_version
 group = project.maven_group
-
+loom {
+    accessWidenerPath = file("src/main/resources/solar_apocalypse.accesswidener")
+}
 repositories {
     // Add repositories to retrieve artifacts from in here.
     // You should only use this when depending on other mods because
